--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,30 @@ Demo/*
 Works/*
 14112021.ses
 00000/*
+111111/~$uplot5_5.docx
+111111/3fill.dat
+111111/20211123.log
+111111/20211129
+111111/20211129.log
+111111/20211123000.log
+111111/a.awk
+111111/aqwe
+111111/binbash.log
+111111/binbash.plt
+111111/cont.log
+111111/experiment.plt
+111111/field-out.dat
+111111/fill.log
+111111/iter.log
+111111/leastsq
+111111/log.log
+111111/newWinterFile.plot
+111111/s.log
+111111/script.awk
+111111/showargs.awk
+111111/test.log
+111111/test0_fill.log
+111111/test0_iter.log
+111111/test0.plt
+Gnuplot5_5.docx
+GnuplotAction.docx
